proposed change to fix equation

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -98,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3333333333333333"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "prob_5_6 = len(event)/len(roll_dice)\n",
@@ -128,7 +117,7 @@
     "\n",
     "The law of relative frequency can be used to prove certain probabilities. But how does this work exactly? You're about to find out!\n",
     "\n",
-    "$$P(E) = \\lim_{n\\rightarrow\\infty} \\dfrac{S{(n)}}{n}$$\n",
+    "$$P(E) = \\lim_{n\\rightarrow\\infty} \\dfrac{S{(n)}}{E{(n)}}$$\n",
     "\n",
     "As you can see in the formula, the law states that when repeating an experiment $n$ times, where $n$ is very big, and you divide the number of \"good\" outcomes by the sample space (here we call it event E), you get to the probability of the event E. It should be clear that we get a more accurate number for P(E) when $n$ grows.\n",
     "\n",
@@ -149,20 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "import numpy as np\n",
@@ -195,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -270,20 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.5, 0.331, 0.333657, 0.33329752)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "prob_10 = event_10/10\n",
@@ -335,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -372,17 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.161 0.    0.598 0.1   0.079 0.005 0.057]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "continents = np.array([P_afr, P_ant, P_as, P_eur, P_na, P_aus, P_sa])\n",
@@ -418,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -455,20 +414,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"We're good!\""
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "check_axioms(continents)"
@@ -496,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -523,19 +471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not quite!\n",
-      "Not quite!\n",
-      "Not quite!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "print(check_axioms(test_1))\n",
@@ -573,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -609,20 +547,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(36, 2)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "sample_dice.shape # should be equal to (36,2)"
@@ -652,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -685,19 +612,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False False False False  True False False False False False  True False\n",
-      " False False False False  True False False False False False  True False\n",
-      "  True  True  True  True  True  True False False False False  True False]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "true_5 = np.any(set_5, axis = 1)\n",
@@ -725,17 +642,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.3055555555555556\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "prob_5 = true_5.sum()/len(sample_dice)\n",
@@ -763,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -787,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -811,19 +720,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False False False False  True  True False False False False  True  True\n",
-      " False False False False  True  True False False False False  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "set_any_5_6 = set_5_6.any(axis=1)\n",
@@ -844,17 +743,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5555555555555556\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "prob_5_6 = set_any_5_6.sum()/len(sample_dice)\n",
@@ -882,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -907,17 +798,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1388888888888889\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "prob_sum_8 = sum_8/len(sample_dice)\n",
@@ -948,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -977,20 +860,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 6)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "sample_mf.shape"
@@ -1010,20 +882,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "sample_length= len(sample_mf)\n",
@@ -1053,36 +914,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[False False False]\n",
-      " [False False  True]\n",
-      " [False False  True]\n",
-      " [False False  True]\n",
-      " [False  True False]\n",
-      " [False  True False]\n",
-      " [False  True False]\n",
-      " [False  True  True]\n",
-      " [False  True  True]\n",
-      " [False  True  True]\n",
-      " [ True  True  True]\n",
-      " [ True  True False]\n",
-      " [ True  True False]\n",
-      " [ True  True False]\n",
-      " [ True False  True]\n",
-      " [ True False  True]\n",
-      " [ True False  True]\n",
-      " [ True False False]\n",
-      " [ True False False]\n",
-      " [ True False False]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "first_3_F = sample_mf[:,:3] == \"F\"\n",
@@ -1103,17 +937,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 1 1 1 1 1 2 2 2 3 2 2 2 2 2 2 1 1 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
     "num_F = np.sum(first_3_F, axis=1)\n",
